# ptouch-lib

./: .gitignore  CLAUDE.md  README.md  ptouch.example.toml  pyproject.toml
.github/workflows/: ci.yml
brother_ptouch/: __init__.py  _win_raw_print.ps1  cli.py  codes.py  config.py  encoder.py  nozzle.py  render.py  simulator.py  transport.py
tests/: test_cli.py  test_cli_robustness.py  test_codes.py  test_config.py  test_coverage_gaps.py  test_encoder.py  test_nozzle.py  test_render.py  test_robustness.py  test_simulator.py  test_size.py  test_transport.py
