[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brother-ptouch"
version = "0.1.0"
description = "Library + CLI to print labels on a Brother PT-P710BT (P-touch CUBE) on 24mm TZe tape"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rich Lewis", email = "richalewis@gmail.com" }]
keywords = ["brother", "p-touch", "ptouch", "pt-p710bt", "label", "printer", "raster", "cups"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
]
dependencies = [
    "Pillow>=10.1",
    "tomli>=1.1.0; python_version < '3.11'",  # tomllib is stdlib on 3.11+
]

[project.optional-dependencies]
windows = ["pywin32; sys_platform == 'win32'"]
dev = ["pytest>=7", "ruff"]

[project.scripts]
ptouch = "brother_ptouch.cli:main"

[project.urls]
Homepage = "https://github.com/hyiger/ptouch-lib"
Repository = "https://github.com/hyiger/ptouch-lib"
Issues = "https://github.com/hyiger/ptouch-lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["brother_ptouch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
